--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-lorem-ipsum": "^1.4.10",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
